tests/errors/calls/call-non-function.fn
---
Description: Calling a value that is not a function
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var x = 5
        var y = x(1, 2)
        return 0
    }
}
